# moderngl

./: .gitignore  CMakeLists.txt  main.cpp
OpenGL/glad/include/glad/: glad.h
OpenGL/glad/src/: glad.c
OpenGL/include/: OpenGL
examples/: triangle.cpp  triangle.fsh  triangle.vsh
modules/ModernGL/: CMakeLists.txt
modules/ModernGL/OpenGL/: CMakeLists.txt
modules/ModernGL/OpenGL/glad/: CMakeLists.txt
modules/ModernGL/include/: moderngl
modules/ModernGL/src/: mgl_core.cpp  mgl_textures.cpp
shaders/: fragment.fsh  vertex.vsh
src/: mgl_core.cpp
